<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg" >

    <RelativeLayout
        android:id="@+id/rel_title"
        android:layout_width="fill_parent"
        android:layout_height="80dp" >

        <ImageView
            android:id="@+id/img_header"
            android:layout_width="fill_parent"
            android:layout_height="80dp"
            android:background="@drawable/title" />
    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/rel2"
        android:layout_width="120dp"
        android:layout_height="100dp"
        android:layout_below="@+id/rel_title"
        android:layout_marginTop="5dp" >

        <ImageView
            android:id="@+id/imageView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:layout_marginBottom="5dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:layout_marginTop="5dp"
            android:background="@drawable/company_icon_about" />
    </RelativeLayout>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/rel_title"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_toRightOf="@+id/rel2"
        android:text="@string/aboutparagraph1"
        android:textColor="#000" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/rel2"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/aboutparagraph2"
        android:textColor="#000" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView2"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/aboutparagraph3"
        android:textColor="#000" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView3"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/aboutparagraph4"
        android:textColor="#000" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/textView4"
        android:layout_marginLeft="15dp"
        android:layout_marginTop="15dp"
        android:text="@string/aboutparagraph5"
        android:textColor="#000" />

    <com.google.android.gms.ads.AdView
        android:id="@+id/adView"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        ads:adSize="BANNER"
        ads:adUnitId="@string/banner_ad_key" >
    </com.google.android.gms.ads.AdView>

</RelativeLayout>